apps/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/name: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
    spec:
      securityContext:
        supplementalGroups:
          - 3003
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /kavita/config
            - name: books
              mountPath: /books
              subPath: Books
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: books
          persistentVolumeClaim:
            claimName: books-kavita
