apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/name: kavita
spec:
  selector:
    app.kubernetes.io/name: kavita
  ports:
    - port: 5000
      targetPort: 5000
